@@ -1,3 +1,0 @@
-Templates:
-#0 name / 
-Variables:
